hide nav unless admin, simplify course info, hide menu

--- a/client/client.jade
+++ b/client/client.jade
@@ -36,7 +36,8 @@ head
 
 template(name='layout')
     // +status
-    +nav
+    if is_admin
+        +nav
     .ui.bottom.attached.pushable.segment
         // +top_sidebar
         +left_sidebar
