--- a/parts/school/course_post.jade
+++ b/parts/school/course_post.jade
@@ -1,21 +1,3 @@
-template(name='course_post_card')
-    .ui.card.view_course_post.pointer
-        img.ui.fluid.rounded.image(src="{{c.url image_id height=200 width=400 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-        .content
-            a.ui.header(href="/course/#{course_id}/post/#{_id}") #{title}
-            .ui.small.grey.header #{when}
-            +comments_view_small
-            +author_info
-        
-template(name='course_post_item')
-    .ui.fluid.segment.view_course_post.pointer
-        a.ui.header(href="/m/course_post/#{_id}/view") #{title}
-        div
-        .ui.small.grey.inline.header #{when}
-        each tags 
-            .ui.basic.small.label #{this}
-        
-
 template(name='course_post_view')
     with current_doc
         .ui.stackable.padded.grid
@@ -50,7 +32,7 @@ template(name='course_post_view')
                     else     
                         +array_view key='tags' label='tags' direct=true
                     
-                    +voting_full
+                    // +voting_full
                     +link_edit key='link' label='link' direct=true
 
                     +array_view key='time_tags' label='time tags' icon='clock' direct=true
@@ -66,6 +48,8 @@ template(name='course_post_view')
                     .spacer
                     .spacer
                     +comments
+                    if watson
+                        +watson_view
 
 template(name='course_post_edit')
     with current_doc
