--- a/parts/pr/post.jade
+++ b/parts/pr/post.jade
@@ -33,12 +33,12 @@ template(name='post_view')
 
             .row 
                 .four.wide.column
-                    .ui.segment
-                        .ui.header 
-                            small author
-                        a.ui.header(href="/user/#{_author.username}") 
-                            img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                            |#{_author.username}
+                    // .ui.segment
+                    //     .ui.header 
+                    //         small author
+                    //     a.ui.header(href="/user/#{_author.username}") 
+                    //         img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                    //         |#{_author.username}
                     .ui.small.grey.header 
                         i.line.chart.icon
                         |stats
@@ -47,7 +47,7 @@ template(name='post_view')
                     each viewers
                         .ui.label #{username
                     +array_view key='tags' label='tags' direct=true
-                    +voting_full
+                    // +voting_full
                     //- +array_view key='location_tags' label='location_tags' direct=true
                 .twelve.wide.column
                     img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
@@ -59,12 +59,9 @@ template(name='post_view')
                     .spacer
                     .spacer
                     +comments
-                // .four.wide.column
-                
+                    if watson
+                        +watson_view
 
-                    //- .ui.fluid.green.button.submit
-                    //-     i.checkmark.icon
-                    //-     |submit
 
 template(name='post_edit')
     with current_doc
